--- a/src/components/building-list/BuildingList.css
+++ b/src/components/building-list/BuildingList.css
@@ -15,9 +15,10 @@
     bottom: 0;
     left: 0;
     z-index: 100; /* Behind the navbar */
-    padding: 48px 0 0; /* Height of navbar */
+    padding: 40px 0 0; /* Height of navbar */
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
     min-width: 225px !important;
+    max-width: 200px !important;
   }
   
   @media (max-width: 767.98px) {
